--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       body {
         margin: 0;
         font-family: Arial, sans-serif;
-        background-color: #fff;
-        color: #333;
-        background-color: #212121;
-        color: #837a7a;
+        /* background-color: #fff; */
+        /* color: #333; */
+        /* background-color: #212121; */
+        /* color: #837a7a; */
       }
 
       header {
@@ -52,7 +52,7 @@
       h1 {
         margin: 0;
         font-size: 2.5em;
-        color: #fff;
+        /* color: #fff; */
       }
 
       nav {
@@ -510,7 +510,7 @@
   </head>
   <body>
     <header>
-      <h1>Dennis Calvert</h1>
+      <h1>Birmingham Street Photography</h1>
       <nav>
         <div class="menu-icon" id="menu-icon">
           <div class="bar"></div>
@@ -536,83 +536,47 @@
         <p>Welcome to my portfolio website.</p>
       </section> -->
       <section id="gallery" class="gallery">
-        <h2>Light Painting</h2>
-        <h3>Long exposure photographs</h3>
+        <h2>Gallery</h2>
+        <!-- <h3>Long exposure photographs</h3> -->
         <div class="grid" id="headshots">
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137e4638388fc9bffb71e.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103249ee574c80dfcaf0.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/67513ad7638388fc9bffb76a.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103349ee574c80dfcaf1.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/67513825638388fc9bffb724.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103e49ee574c80dfcaf4.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137c2638388fc9bffb718.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103749ee574c80dfcaf2.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/67513815638388fc9bffb723.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755105f49ee574c80dfcaff.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
           <div class="grid-item" style="flex: 1 1 299.5px">
             <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/6751384c638388fc9bffb728.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137bb638388fc9bffb716.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137c4638388fc9bffb719.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137bd638388fc9bffb717.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675137ed638388fc9bffb720.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/6751384f638388fc9bffb729.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/66d0a7ffeb739771171a6f22/images/l/675138b3638388fc9bffb72c.jpeg"
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755105c49ee574c80dfcafe.jpeg"
               alt="Dennis Calvert Photography"
             />
           </div>
         </div>
-
+      </section>
       <section id="about">
         <div
           style="
