--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       content="Photography by Dennis Calvert. Serving Birmingham, Alabama."
     />
     <title>Birmingham Street Photography</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         box-sizing: border-box;
@@ -15,6 +21,7 @@
       body {
         margin: 0;
         font-family: Arial, sans-serif;
+        color: #666;
         /* background-color: #fff; */
         /* color: #333; */
         /* background-color: #212121; */
@@ -25,9 +32,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 0;
+        padding: 20px;
         border-bottom: 1px solid #e7e7e7;
-        max-width: 1200px;
+        /* max-width: 1200px; */
         margin: 0 auto;
       }
 
@@ -52,6 +59,7 @@
       h1 {
         margin: 0;
         font-size: 2.5em;
+        font-family: "Shrikhand", serif;
         /* color: #fff; */
       }
 
@@ -100,7 +108,7 @@
       }
 
       section {
-        max-width: 1200px;
+        /* max-width: 1200px; */
         margin: 0 auto;
       }
 
@@ -120,7 +128,7 @@
         flex-wrap: wrap;
         align-content: flex-start;
         justify-content: center;
-        max-width: 1200px;
+        /* max-width: 1200px; */
         margin: 0 auto;
         transition: all 1s;
       }
@@ -536,7 +544,7 @@
         <p>Welcome to my portfolio website.</p>
       </section> -->
       <section id="gallery" class="gallery">
-        <h2>Gallery</h2>
+        <!-- <h2>Gallery</h2> -->
         <!-- <h3>Long exposure photographs</h3> -->
         <div class="grid" id="headshots">
           <div class="grid-item" style="flex: 1 1 299.5px">
@@ -577,7 +585,7 @@
           </div>
         </div>
       </section>
-      <section id="about">
+      <!-- <section id="about">
         <div
           style="
             padding: 10px 40px;
@@ -593,7 +601,7 @@
           class="bio-img"
           alt="Dennis Calvert"
         />
-      </section>
+      </section> -->
       <section id="contact">
         <h2>Contact</h2>
         <p><a href="tel:+2563390748" id="phone-num">256-339-0748</a></p>
