--- a/index.html
+++ b/index.html
@@ -583,6 +583,12 @@
               alt="Dennis Calvert Photography"
             />
           </div>
+          <div class="grid-item" style="flex: 1 1 299.5px">
+            <img
+              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/67551f5b1da2d7e9c171aadc.jpeg"
+              alt="Dennis Calvert Photography"
+            />
+          </div>
         </div>
       </section>
       <!-- <section id="about">
