make gallery dynamic

--- a/index.html
+++ b/index.html
@@ -52,52 +52,16 @@
       <section id="gallery" class="gallery">
         <!-- <h2>Gallery</h2> -->
         <!-- <h3>Long exposure photographs</h3> -->
-        <div class="grid" id="headshots">
-          <div class="grid-item" style="flex: 1 1 299.5px">
+        <div class="grid" id="gallery-container">
+          <!-- <div class="grid-item" style="flex: 1 1 299.5px">
             <img
               src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103249ee574c80dfcaf0.jpeg"
               alt="Dennis Calvert Photography"
             />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103349ee574c80dfcaf1.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103e49ee574c80dfcaf4.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755103749ee574c80dfcaf2.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755105f49ee574c80dfcaff.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/6755105c49ee574c80dfcafe.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
-          <div class="grid-item" style="flex: 1 1 299.5px">
-            <img
-              src="https://magiccityfilmmakers.s3.us-east-2.amazonaws.com/galleries/67550fea49ee574c80dfcae0/images/l/67551f5b1da2d7e9c171aadc.jpeg"
-              alt="Dennis Calvert Photography"
-            />
-          </div>
+          </div> -->
         </div>
       </section>
-      <!-- <section id="about">
+      <section id="about">
         <div
           style="
             padding: 10px 40px;
@@ -113,7 +77,7 @@
           class="bio-img"
           alt="Dennis Calvert"
         />
-      </section> -->
+      </section>
       <section id="contact">
         <h2>Contact</h2>
         <p><a href="tel:+2563390748" id="phone-num">256-339-0748</a></p>
